--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  --main-width: 561px;
+  --main-bg: #F6F6F6;
+  --main-shadow: rgba(0,0,0,.25);
+  --color-wallet: #3e98fa;
+  --bg-input: #F8CEAF;
+  --border-input: rgba(0,0,0,.5);
+  --color-input-error: #ff0000;
+  --bg-danger: #FF0000
 }
